--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "webpack",
     "build_NODE_ENV": "set NODE_ENV=production&& webpack",
     "serve": "serve -s docs -p 3300",
+    "netlify": "netlify deploy",
+    "netlify-prod": "netlify deploy --prod",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs",
     "server": "json-server --watch db.json --port 5000"
   },
   "author": "",
@@ -33,9 +37,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "6.1.0",
+    "gh-pages": "^3.2.3",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
+    "netlify-cli": "^8.6.15",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "sass-loader": "^10.1.0",
