--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "start4": "set NODE_ENV=development&& webpack-cli serve --open --mode development",
     "start": "set NODE_ENV=development&& webpack-dev-server",
     "build": "webpack",
     "build_NODE_ENV": "set NODE_ENV=production&& webpack",
@@ -41,13 +42,13 @@
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "netlify-cli": "^8.6.15",
-    "node-sass": "^5.0.0",
+    "node-sass": "6.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.0",
     "webpack": "4.44.2",
-    "webpack-cli": "^4.2.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-manifest-plugin": "^2.2.0"
   }
